<resources>
    <string name="app_name">MoveIt!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="entry_prompt">How are you?</string>
    <string name="meal_name">Meal Name</string>
    <string name="calories">Calories</string>
    <string name="meal_notes">Meal Notes</string>
    <string name="meals">Add/Edit Meals</string>
    <string name="activities">Add/Edit Activities</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="meal_list_title">Your Meals</string>
    <string name="delete">Delete</string>
    <string name="password_rules">Minimum eight characters, at least 1 uppercase, 1 lowercase, 1 number, and 1 special symbol</string>
    <string name="hold_tooltip_msg">Hold to see password requirements ></string>
    <string name="entries">Entries</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="add_entry_title">Adding New Entry</string>
    <string name="add_meal_title">Adding New Meal</string>
    <string name="edit_meal_title">Editing Meal</string>
    <string name="activity_list_title">Your Activity Categories</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="reminder_time">Set Reminder Time</string>
    <string name="select_theme">Change Theme</string>
    <string name="about">About</string>
    <string name="search">Search…</string>
    <string name="register_title">Create Account</string>
    <string name="login_title">Login</string>
    <string name="currentTheme">Current Theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="currentThemeDark">Current Theme: Dark</string>
    <string name="currentThemeLight">Current Theme: Light</string>
    <string name="currentThemeSys">Current Theme: System Default</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_request">Send</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_settings_title">Your Account Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="update_email">Update Email</string>
    <string name="current_password">Enter your current password</string>
    <string name="new_password">Enter your new password</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="enter_a_new_email_address">Enter your new email address</string>
    <string name="update_email_title">Update Email Address</string>
    <string name="photo_gallery_title">Your Photo Gallery</string>
    <string name="view_photo_title">Viewing a Photo</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="about_description">MoveIt! is a Fitness Tracker Android app built to motivate users to stay fit, allowing users to create daily entries to reflect on their day, save custom meals and activities, and view their progress in a quick and easy way</string>
    <string name="author_info">I initially developed MoveIt! as a way to motivate my friends, family, and me to get into shape, allowing us to get into the routine of tracking our everyday progress, calorie intake, activities done, and overall mood for the day</string>
    <string name="socials_text">Feel free to check out my socials!</string>
    <string name="current_app_version">Current App Version:</string>
    <string name="attributions">Attributions</string>
    <string name="contact_support">Contact Support</string>
    <string name="view_change_log">View Change Log</string>
    <string name="linked_in_url">https://www.linkedin.com/in/daniel-v-nguyen/</string>
    <string name="github_url">https://github.com/danielvnguyen</string>
    <string name="category_name">Category Name</string>
    <string name="add_category_title">Adding New Category</string>
    <string name="no_activities">You have no activities in this category</string>
    <string name="no_categories">You have no activity categories</string>
    <string name="no_meals">You have no meals</string>
    <string name="no_entries">You have no entries. Create one by pressing the (+) button!</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="no_takesies_backsies">This cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirm_delete_photo">Are you sure you want to delete this photo?</string>
    <string name="confirm_delete_meal">Are you sure you want to delete this meal?</string>
    <string name="confirm_delete_category">Are you sure you want to delete this category?</string>
    <string name="activity_name">Activity Name</string>
    <string name="confirm_delete_activity">Are you sure you want to delete this activity?</string>
    <string name="edit_activity_title">Editing Activity</string>
    <string name="new_activity_title">Adding New Activity</string>
    <string name="activities_listview_header">Activities:</string>
    <string name="per">per</string>
    <string name="number_hint">#</string>
    <string name="meal_calories">Meal Calories</string>
    <string name="_0">0</string>
    <string name="amazing">Amazing</string>
    <string name="great">Great</string>
    <string name="good">Good</string>
    <string name="meh">Meh</string>
    <string name="bad">Bad</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="meals_header">Meals</string>
    <string name="activities_header">Activities</string>
    <string name="calorie_sum">Calories Today:</string>
    <string name="entry_notes">Entry Notes</string>
    <string name="add_image">Add Image:</string>
    <string name="mood">Mood</string>
    <string name="date_and_time">Date and Time</string>
    <string name="entry_note_header">Note:&#160;</string>
    <string name="meal_chip_group_header">Meals:</string>
    <string name="activities_chip_group_header">Activities:</string>
    <string name="calories_header">Calories:&#160;</string>
    <string name="editing_entry_title">Editing Entry</string>
    <string name="confirm_delete_entry">Are you sure you want to delete this Entry?</string>
    <string name="month">Month</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="reset_button">Reset</string>
    <string name="mood_count">Mood Count</string>
    <string name="remind_me_at">Remind Me at</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="days_in_a_row">Days in a Row:</string>
    <string name="of_entries"># of Entries</string>
    <string name="add_today_s_entry">Add today\'s entry!</string>
    <string name="slide_one_text">MoveIt! is a fitness app for Android that helps users stay fit by allowing them to create daily entries, save custom meals and activities, and track their progress easily</string>
    <string name="slide_two_text">You can create an entry by pressing the (+) button on the Entries page. After filling out the entry, you can save it by pressing the save button</string>
    <string name="slide_three_text">In the Calendar tab, you can see a monthly view of your entries, along with your entry streak and mood count. Clicking on a day will pull up the entries made that day</string>
    <string name="slide_four_text"><![CDATA[In the Settings tab, you can access your saved meals & activities, photos, reminder time, account settings, color theme, and other information]]></string>
    <string name="slide_five_text">If you ever need to refer back to this guide, simply visit the Settings tab. May your experience with MoveIt! be enjoyable!</string>
    <string name="see_guide">See Guide</string>
    <string name="sort_by">Sort By: Newest</string>
    <string name="activity_note_hint">Keep related information to this activity, such as your personal record</string>
    <string name="activity_notes">Activity Notes</string>
    <string name="or">OR</string>
    <string name="google_sign_in_prompt">To verify, please sign in to your Google account</string>
    <string name="reset_calendar">Reset Calendar</string>
</resources>