<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.entries.AddEntry"
    tools:ignore="Autofill, LabelFor, ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/entryPromptTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway"
            android:layout_gravity="center"
            android:text="@string/entry_prompt"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/entryDateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/date"
                android:inputType="date"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="287dp" />

            <EditText
                android:id="@+id/entryTimeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="371dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amazingMoodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/amazing"
                    app:drawableTopCompat="@drawable/amazing_icon"
                    app:drawableTint="@color/amazingColour" />

                <TextView
                    android:id="@+id/greatMoodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/great"
                    app:drawableTopCompat="@drawable/great_icon"
                    app:drawableTint="@color/greatColour" />

                <TextView
                    android:id="@+id/goodMoodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/good"
                    app:drawableTopCompat="@drawable/good_icon"
                    app:drawableTint="@color/goodColour" />

                <TextView
                    android:id="@+id/mehMoodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/meh"
                    app:drawableTopCompat="@drawable/meh_icon"
                    app:drawableTint="@color/mehColour" />

                <TextView
                    android:id="@+id/badMoodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bad"
                    app:drawableTopCompat="@drawable/bad_icon"
                    app:drawableTint="@color/badColour" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/meals_header"
            android:textSize="16sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mealChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/dark_green"
        app:strokeWidth="2dp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>